Fixed the navbar dark mode issue

--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,6 @@ body {
 }
 
 .dark {
-  --foreground: oklch(0.985 0.002 247.839);
   --card: oklch(0.21 0.034 264.665);
   --card-foreground: oklch(0.985 0.002 247.839);
   --popover: oklch(0.21 0.034 264.665);
